[gd_scene load_steps=11 format=3 uid="uid://ho8owp8upiqg"]

[ext_resource type="Script" path="res://projectile/projectile.gd" id="1_y7xgu"]
[ext_resource type="Texture2D" uid="uid://cnl18yl7fxxoq" path="res://boss/Boss1/boss1_arrow.png" id="2_bu8u4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i784i"]
atlas = ExtResource("2_bu8u4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_csfx6"]
atlas = ExtResource("2_bu8u4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmovj"]
atlas = ExtResource("2_bu8u4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs8sm"]
atlas = ExtResource("2_bu8u4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uia4w"]
atlas = ExtResource("2_bu8u4")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_esb5b"]
atlas = ExtResource("2_bu8u4")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kqwxk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i784i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csfx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmovj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs8sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uia4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esb5b")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u57jo"]
size = Vector2(36, 97)

[node name="Projectile" type="Area2D" groups=["projectile"]]
collision_mask = 2
script = ExtResource("1_y7xgu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_kqwxk")
autoplay = "default"
frame = 1
frame_progress = 0.241385

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13.495)
shape = SubResource("RectangleShape2D_u57jo")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -0.943878)
scale = Vector2(1, 4.16198)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -73.06
offset_right = 20.0
offset_bottom = -50.06
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
